deploy/kind/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypershell-controller
  namespace: hypershell-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypershell-controller
  template:
    metadata:
      labels:
        app: hypershell-controller
    spec:
      serviceAccountName: hypershell-controller
      securityContext:
        runAsNonRoot: true
      containers:
        - name: controller
          image: quay.io/redhat-services-prod/hcm-eng-prod-tenant/hypershell-main/hypershell-control-plane-main:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
